[package]
name = "dparse-html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#dparse = { version = "0.1.0", git = "https://github.com/Molkars/dparse.git" }
dparse = { path = "../dparse", features = [] }
dparse-derive = { path = "../dparse-derive" }

[dev-dependencies]
dparse = { path = "../dparse", features = ["basic"] }
dparse-derive = { path = "../dparse-derive" }